--- a/New/src/main/res/layout/item_user.xml
+++ b/New/src/main/res/layout/item_user.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="5dp"
+        android:layout_toStartOf="@+id/btn_update"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/tv_id"
         android:layout_width="match_parent"
@@ -15,5 +22,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Name"/>
+    </LinearLayout>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/btn_update"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:text="Update"/>
+
+
+</RelativeLayout>
